--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -1,18 +1,10 @@
-<!--
-  Generated template for the EditPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>edit</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
-
-</ion-content>
+  <h2>Edit User</h2>
+  <form (ngSubmit)="editUser(9)">
+    <ion-item>
+      <ion-label>Name</ion-label>
+      <ion-input type="text" [(ngModel)]="user.name" name="name"></ion-input>
+    </ion-item>
+    <button ion-button type="submit" block>Edit User</button>
+  </form>
+ </ion-content>
